kubernetes/retail-assistant/base/retail-assistant-service.yml
apiVersion: v1
kind: Service
metadata:
  name: retail-assistant
  namespace: retail-assistant
spec:
  selector:
    app: retail-assistant
  type: NodePort
  ports:
    - name: retail-assistant
      port: 7022
      targetPort: 7022
